--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .navbar-dark .navbar-nav .nav-link {
-    color: rgba(217, 209, 115, 0.49);
+    color: rgb(255 255 255);
 }
 
 .nav-link{
     margin-left: 10px;
-    /* background-color: rgba(182, 180, 163, 0.96); */
 }
 
 .nav-link:hover{
@@ -14,63 +20,44 @@
 }
 
 .name{
-    /* color: rgba(217, 209, 115, 0.49); */
-    padding: 350px 150px;
+    height: 700px;
+    padding: 200px 150px;
     text-align: center;
-    border-bottom: 1px rgba(217, 209, 115, 0.49) solid;
-    background-size: 50%, 25%, 25%;
-    background-image: url(kelly-sikkema-ChsnZBAX6wA-unsplash.jpg);
+    border-bottom: 1px black solid;
 } 
 
-
 .container-name-title{
-    font-size: 80px;
+    color: black;
+    font-size: 60px;
     margin-bottom: 20px;
 }
 
-.offer{
-    padding: 50px 60px 50px 60px;
-    color: #333;
-    background-color: rgba(226, 225, 216, 1);
-    border-bottom: 1px black solid;
-}
 
 .title-offer{
     font-size: 50px;
-    margin-top: 20px;
+    margin-top: 50px;
     margin-bottom: 50px;
     text-align: center;
 }
 
-.accordion-header:active{
-    background-color: rgba(226, 225, 216, 1);
-    color: black;
-}
-
-.container-offers-second{
-    margin-top: 100px;
-}
-
-.hover-zoom {
-    padding: 10px;
-    text-align: center;
-    border: 1px solid #333;
-    background-color: white;
-    transition: transform 0.3s;
-}
-
-.hover-zoom:hover {
-    color: rgba(217, 209, 115, 0.49);
+.accordion-button:not(.collapsed) {
     background-color: #333;
-    border-radius: 10px;
-    transform: scale(1.1); 
+    color: white;
 }
 
-.team{
-    padding: 30px;
-    color: #333;
-    background-color: rgba(226, 225, 216, 1);
-    border-bottom: 1px black solid;
+.accordion{
+    padding-left: 180px;
+    padding-right: 180px;
+    margin: auto;
+    --bs-accordion-btn-focus-border-color: #333;
+    --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(203, 192, 198, 0.16);
+    --bs-accordion-active-color: #fff;
+}
+
+#team{
+    margin-top: 50px;
+    padding-bottom: 50px;
+    border-bottom: #333 solid 1px;
 }
 
 #img-team{
@@ -78,35 +65,27 @@
     border: #333 solid 1px;
 }
 
-.title-team{
-    font-size: 50px;
-    margin-top: 20px;
-    padding-bottom: 50px;
-    text-align: center;
+#img-member{
+    margin-right: 20px;
+    width: 350px;
+    height: 450px;
+    border: #333 solid 1px;
+    float: left;
 }
 
-.questions{
-    color: #333;
-    background-color: rgba(226, 225, 216, 1);
-    padding-bottom: 30px;
+.carousel-caption{
     text-align: center;
-}
-
-#button-questions{
-    padding: 10px;
-    font-size: 20px;
-    background-color: white;
+    justify-content: center;
     color: black;
-    border: 1px black solid;
-    width: 120px;
-    height: 60px;
 }
 
-#button-questions:hover{
-    background-color: #333;
-    color: rgba(217, 209, 115, 0.49);
-    transform: scale(1.1); 
-} 
+.btn-primary{
+    --bs-btn-bg: #333;
+    --bs-btn-border-color: #333;
+    --bs-btn-hover-color: #333;
+    --bs-btn-hover-bg: white;
+    --bs-btn-hover-border-color: 333;
+}
 
 .container-questions-title{
     font-size: 50px;
@@ -115,56 +94,134 @@
     text-align: center;
 }
 
-
-.contact{
-    color: #333;
-    background-color: rgba(226, 225, 216, 1);
-    padding: 70px;
-    padding-bottom: 70px;
-    text-align: center;
-    border-top: 1px black solid;
-    border-bottom: 1px black solid;
-}
-
-#email-contact, #phone, #address{
-    font-size: 20px;
-}
-
-
-.opening-hours{
-    background-color: rgba(226, 225, 216, 1);
-    text-align: center;
-    padding-top: 20px;
-    border-bottom: #333 solid 1px;
-}
-
-#button-opening-hours{
+#name, #email, #topic, #message{
     padding: 10px;
-    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+#button-questions{
+    text-align: center;
+    padding: 10px;
+    font-size: 15px;
     background-color: white;
     color: black;
+    border-radius: 20px;
     border: 1px black solid;
-    width: 160px;
-    height: 80px;
+    width: 100px;
+    height: 40px;
 }
 
-#button-opening-hours:hover{
+#button-questions:hover{
     background-color: #333;
-    color: rgba(217, 209, 115, 0.49);
-    transform: scale(1.1); 
-} 
+    color: white;
+}
+
+#contact{
+    color: white;
+    background-color: #333;
+}
+
+.opening-hours, .address, .contact{
+    padding-left: 70px;
+    padding-right: 70px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+.opening-hours, .address{
+    border-right: 1px solid white;
+}
 
 footer{
-    background-color: rgba(226, 225, 216, 1); 
+    text-align: center;
+    border-top: 1px white solid;
+    color: white;
+    background-color: #333;
 }
 
-td{
-    padding-left: 10px;
+#scrollToTop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    font-size: 16px;
+    border: none;
+    z-index: 1000;  
 }
 
-#go-to-the-top{
-    background-color: rgba(226, 225, 216, 1);
-    padding-bottom: 20px;
-    padding-right: 20px;
-    text-align: right;
+#scrollToTop:hover {
+    background-color: #555;
 }
+
+section{
+    /* min-height: 100vh; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+section:nth-child(3){
+    text-align: justify;
+    height: 300px;
+    background: rgba(175, 175, 175, 0.4);
+    font-size: 30px;
+    padding: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 100px;
+    border-bottom: #333 1px solid;
+}
+section:nth-child(4){
+    border-top: #333 1px solid;
+    color: black;
+    border-bottom: #333 1px solid;
+}
+section .container{
+    margin: 100px;
+}
+section h2{
+    font-size: 40px;
+    text-align: center;
+}
+section .text-container{
+    display: flex;
+}
+section .text-container .text-box{
+    margin: 20px;
+    padding: 20px;
+    border: 1px black solid;
+    border-radius: 20px;
+}
+
+section .text-container .text-box:hover{
+    background-color: #333;
+    color: white;
+    transform: scale(1.1);
+}
+
+section .text-container .text-box h3{
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+@media (max-width: 900px){
+    section h1{
+        font-size: 2rem;
+        text-align: center;
+    }
+    section .text-container{
+        flex-direction: column;
+    }
+}
+
+.reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 1s all ease;
+}
+
+.reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+} 
