--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -10,218 +9,421 @@
 }
 
 .nav-link{
-    margin-left: 10px;
+    color: #fff;
+    margin: 10px;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 2px;
+    padding: 5px;
+    border: transparent 1px solid;
 }
 
 .nav-link:hover{
-    background-color: rgba(226, 225, 216, 1);
-    color: black;
-    border-radius: 10px solid;
+    border: #005450 1px solid;
 }
 
 .name{
-    height: 700px;
-    padding: 200px 150px;
+    padding: 320px 150px;
     text-align: center;
-    border-bottom: 1px black solid;
-} 
+    background-image: url(./image/jan-weber-DSxIjXSxjTI-unsplash.jpg);
+    background-size: cover;
+}
 
-.container-name-title{
-    color: black;
+.nameTitle{
+    font-size: 80px;
+    font-weight: 400;
+    letter-spacing: 2px;
+}
+
+.green{
+    color: #005450;
+}
+
+#nameExplore{
+    padding: 15px 30px;
+    text-transform: uppercase;
+    background-color: #005450;
+    transition: transform 1000ms;
+    --bs-btn-border-color: #005450;
+    --bs-btn-hover-bg: #003533;
+    --bs-btn-hover-border-color: #003533;
+    --bs-btn-active-bg: #003533;
+    --bs-btn-active-border-color: #003533;
+}
+
+#nameExplore:hover{
+    transform: translateY(-0.75rem);
+    transition: transform 500ms;
+}
+
+#about{
+    padding: 50px;
+}
+
+#title{
+    text-align: center;
+    border-right: #00756f 2px solid;
+}
+
+.aboutTitle{
+    padding-top: 40px;
+    color: #005450;
     font-size: 60px;
+    font-weight: 400;
+    letter-spacing: 2px;
+}
+
+#aboutTitleSecond{
+    font-size: 30px;
+    padding-bottom: 10px;
+}
+
+#aboutText{
+    padding: 50px;
+    text-align: justify;
+    font-size: 20px;
+}
+
+#media{
+    background-color: #005450;
+    color: #fff;
+    margin-bottom: 0px;
+}
+
+#mediaTitle{
+    text-align: center;
+    font-size: 25px;
+    font-weight: 300;
+    letter-spacing: 2px;
+    padding: 10px;
+}
+
+#mediaUl{
+    vertical-align: baseline;
+    list-style-type: none;
+    text-align: center;
+    margin-bottom: 0;
+}
+
+.mediaLi{
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 100;
+    text-transform: uppercase;
+    padding: 10px 100px;
+}
+
+#history{
+    background-image: url(./image/annie-spratt-BcGoZXjyPzA-unsplash.jpg);
+    background-size: cover;
+    text-align: center;
+    padding: 10px;
+    padding: 150px;
+}
+
+#historyTitle{
+    font-size: 60px;
+    font-weight: 500;
+    letter-spacing: 3px;
+}
+
+#containerHistory{
+    padding-top: 20px;
+}
+
+#carouselExampleIndicators{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    width: 600px;
+    height: 200px;
+    border-radius: 10px;
+    border: #003533 1px solid;
+}
+
+#historyTitleCarousel{
+    font-size: 15px;
+    color: #003533;
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-size: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
+    padding: 20px;
+    border-bottom: #00756f 5px solid;
+}
+
+#historyTextCarousel{
+    font-size: 15px;
+    text-align: center;
+    letter-spacing: 1px;
+    padding: 20px;
+    font-weight: 300;
+}
+
+#offerImgFirst{
+    margin-left: 150px;
+    box-shadow: 20px 20px 10px 5px #003533;
+}
+
+#offerImgSecond{
+    margin-left: 100px;
+    box-shadow: -20px -20px 10px 5px #003533;
+}
+
+#containerOffer{
+    margin: 50px;
+    padding: 50px;
+    border-bottom: #003533 2px solid;
+}
+
+#titleOffer{
+    font-size: 40px;
+    font-weight: 600;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: #005450;
+    text-align: center;
+    padding: 10px;
     margin-bottom: 20px;
 }
 
-
-.title-offer{
-    font-size: 50px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    text-align: center;
+#textOffer{
+    text-align: justify;
+    font-size: 20px;
+    font-weight: 100;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
 }
 
-.accordion-button:not(.collapsed) {
-    background-color: #333;
-    color: white;
+#contactUs{
+    background-color: #005450;
+    color: #fff;
+    font-size: 30px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    text-align: justify;
+    padding: 100px 300px;
 }
 
-.accordion{
-    padding-left: 180px;
-    padding-right: 180px;
-    margin: auto;
-    --bs-accordion-btn-focus-border-color: #333;
-    --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(203, 192, 198, 0.16);
-    --bs-accordion-active-color: #fff;
+.contactUsButton{
+    text-decoration: none;
+    color: #005450;
+    background-color: #fff;
+    border: 1px solid white;
+    border-radius: 20px;
+    padding: 10px;
+    margin-left: 400px;
+    animation: colorChange 5s linear infinite;
+}
+
+@keyframes colorChange {
+    0% {
+        background-color: #fff;
+    }
+    100% {
+        background-color: #00756f;
+    }
+}
+
+#opinion{
+    width: 900px;
+    margin: 100px auto;
+}
+
+#opinionTitle{
+    color: #fff;
+    padding: 10px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    text-align: left;
+}
+
+#opinionText{
+    color: #fff;
+    font-weight: 200;
+    letter-spacing: 1px;
+    text-align: justify;
+}
+
+#services{
+    background-color: #005450;
+    color: #fff;
+    padding: 50px 150px;
+}
+
+#servicesTitle{
+    font-size: 60px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+#servicesText{
+    font-weight: 200;
+    letter-spacing: 1px;
+    text-align: justify;
+}
+
+#servicesButton{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 15px 30px;
+    text-transform: uppercase;
+    color: #005450;
+    background-color: #fff;
+    border: 1px solid #fff;
+    --bs-btn-active-bg: #003533;
+    --bs-btn-active-border-color: #003533;
+}
+
+#injuryServicesText{
+    color: #003533;
+    font-size: 15px;
+    font-weight: 100px;
+    letter-spacing: 1px;
+}
+
+#injuryServicesCol{
+    margin: 10px;
+    padding: 10px;
+}
+
+#injuryServicesCol:hover{
+    color: #fff;
+    background-color: #005450;
+    border-radius: 5px;
 }
 
 #team{
-    margin-top: 50px;
-    padding-bottom: 50px;
-    border-bottom: #333 solid 1px;
+    margin: 50px;
 }
 
-#img-team{
-    opacity: 0.2;
-    border: #333 solid 1px;
+#teamInfo{
+    padding: 30px;
+    background-color: #003533;
 }
 
-#img-member{
-    margin-right: 20px;
-    width: 350px;
-    height: 450px;
-    border: #333 solid 1px;
-    float: left;
+#containerTeam{
+    background-color: #003533;
+    
 }
 
-.carousel-caption{
+#teamImg{
+    border-radius: 200px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-left: 80px;
+    
+}
+
+#titleTeamInfo{
+    font-size: 40px;
+    font-weight: 400;
+    letter-spacing: 2px;
     text-align: center;
-    justify-content: center;
-    color: black;
-}
-
-.btn-primary{
-    --bs-btn-bg: #333;
-    --bs-btn-border-color: #333;
-    --bs-btn-hover-color: #333;
-    --bs-btn-hover-bg: white;
-    --bs-btn-hover-border-color: 333;
-}
-
-.container-questions-title{
-    font-size: 50px;
-    padding-top: 20px;
-    padding-bottom: 50px;
-    text-align: center;
-}
-
-#name, #email, #topic, #message{
+    color: #fff;
     padding: 10px;
-    margin-bottom: 15px;
 }
 
-#button-questions{
+#teamRole{
+    font-size: 20px;
+    font-weight: 200;
+    letter-spacing: 2px;
     text-align: center;
-    padding: 10px;
-    font-size: 15px;
-    background-color: white;
-    color: black;
-    border-radius: 20px;
-    border: 1px black solid;
-    width: 100px;
-    height: 40px;
+    color: #fff;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #fff;
 }
 
-#button-questions:hover{
-    background-color: #333;
-    color: white;
+#pills-tab{
+    border-bottom: 1px solid #fff;
+}
+
+#pills-tabContent{
+    color: #fff;
+    letter-spacing: 1px;
+    font-weight: 200;
+    text-align: justify;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: var(--bs-nav-pills-link-active-color);
+    background-color: #005450;
+}
+
+.nav{
+    --bs-nav-link-hover-color: #fff;
 }
 
 #contact{
-    color: white;
-    background-color: #333;
+    background-image: url(./image/annie-spratt-BcGoZXjyPzA-unsplash.jpg);
+    background-size: cover;
 }
 
-.opening-hours, .address, .contact{
-    padding-left: 70px;
-    padding-right: 70px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-
+#titleContact{
+    padding: 50px;
+    text-align: center;
+    color: #005450;
+    font-size: 80px;
+    font-weight: 400;
+    letter-spacing: 2px;
+    width: 100px;
+    height: 100px;
 }
 
-.opening-hours, .address{
-    border-right: 1px solid white;
+.containerForm{
+    padding: 50px;
+}
+
+#buttonForm{
+    padding: 15px 30px;
+    text-transform: uppercase;
+    background-color: #005450;
+    border: 1px solid #005450;
+    --bs-btn-active-bg: #003533;
+    --bs-btn-active-border-color: #003533;
+}
+
+#buttonForm:hover{
+    color: #005450;
+    background-color: #fff;
+    border: 1px solid #fff;
 }
 
 footer{
-    text-align: center;
-    border-top: 1px white solid;
     color: white;
-    background-color: #333;
+    background-color: #003533;
+}
+
+#colFooter{
+    padding: 20px;
+    text-align: center;
+}
+
+#copyright{
+    border-top: #fff 1px solid;
+    text-align: center;
+    padding: 5px;
 }
 
 #scrollToTop {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    font-size: 16px;
-    border: none;
+    padding: 10px 20px;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 2px;
+    background-color: #333;
+    color: #fff;
+    cursor: pointer;
+    border: 1px solid #333;
+    border-radius: 5px;
     z-index: 1000;  
 }
 
 #scrollToTop:hover {
-    background-color: #555;
-}
-
-section{
-    /* min-height: 100vh; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-section:nth-child(3){
-    text-align: justify;
-    height: 300px;
-    background: rgba(175, 175, 175, 0.4);
-    font-size: 30px;
-    padding: 50px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-right: 100px;
-    border-bottom: #333 1px solid;
-}
-section:nth-child(4){
-    border-top: #333 1px solid;
-    color: black;
-    border-bottom: #333 1px solid;
-}
-section .container{
-    margin: 100px;
-}
-section h2{
-    font-size: 40px;
-    text-align: center;
-}
-section .text-container{
-    display: flex;
-}
-section .text-container .text-box{
-    margin: 20px;
-    padding: 20px;
-    border: 1px black solid;
-    border-radius: 20px;
-}
-
-section .text-container .text-box:hover{
-    background-color: #333;
-    color: white;
-    transform: scale(1.1);
-}
-
-section .text-container .text-box h3{
-    font-size: 20px;
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-@media (max-width: 900px){
-    section h1{
-        font-size: 2rem;
-        text-align: center;
-    }
-    section .text-container{
-        flex-direction: column;
-    }
-}
-
-.reveal{
-    position: relative;
-    transform: translateY(150px);
-    opacity: 0;
-    transition: 1s all ease;
-}
-
-.reveal.active{
-    transform: translateY(0);
-    opacity: 1;
+    background-color: #003533;
+    border: 1px solid #fff;
 }
